--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,10 @@ h4 {
     top: 5rem;
 }
 
+.low-price div h3 {
+    font-size: 200%;
+}
+
 .low-price div .btn {
     margin-top: 2rem;
 }
@@ -102,6 +106,6 @@ textarea {
 
     .serve-categories img {
         height: 20rem;
-        width: auto;
+        width: 100%;
     }
 }
